[gd_scene load_steps=9 format=3 uid="uid://d356duxwr8c7c"]

[ext_resource type="Script" uid="uid://dqe38p5ng3c0c" path="res://scenes/sell_portal/sell_portal.gd" id="1_q37ab"]
[ext_resource type="Material" uid="uid://djrscqxmh7ufg" path="res://assets/shaders/2d_outline_shader.tres" id="1_se251"]
[ext_resource type="Texture2D" uid="uid://c6ftpwufr6jsd" path="res://assets/isometric/icon/delete_icon.png" id="2_q37ab"]
[ext_resource type="Script" uid="uid://dssc5pe7ik6wk" path="res://components/outline_highlighter.gd" id="3_gmlex"]
[ext_resource type="Texture2D" uid="uid://gb1du6ocfln6" path="res://assets/isometric/icon/energy_icon.png" id="4_svd6b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6kxgn"]
radius = 32.0

[sub_resource type="LabelSettings" id="LabelSettings_o1cao"]
font_color = Color(0, 0.73333335, 0.3137255, 1)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_rf1ph"]
font_color = Color(0, 0.73333335, 0.3137255, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="SellPortal" type="Area2D"]
script = ExtResource("1_q37ab")

[node name="Visuals" type="CanvasGroup" parent="."]
material = ExtResource("1_se251")

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
position = Vector2(32, 32)
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_q37ab")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32, 32)
shape = SubResource("CircleShape2D_6kxgn")

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("visuals")]
script = ExtResource("3_gmlex")
visuals = NodePath("../Visuals")
outline_color = Color(1, 0, 0, 0.4509804)
outline_thickness = 2

[node name="Resource" type="HBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
offset_top = 50.0
offset_right = 64.0
offset_bottom = 114.0
theme_override_constants/separation = 0

[node name="PlusLabel" type="Label" parent="Resource"]
layout_mode = 2
text = "+"
label_settings = SubResource("LabelSettings_o1cao")

[node name="ResourceLabel" type="Label" parent="Resource"]
unique_name_in_owner = true
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_rf1ph")

[node name="ResourceIcon" type="TextureRect" parent="Resource"]
custom_minimum_size = Vector2(24, 32)
layout_mode = 2
texture = ExtResource("4_svd6b")
expand_mode = 1
stretch_mode = 5

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
